--- a/Exorcism/E00_linear_regression.ipynb
+++ b/Exorcism/E00_linear_regression.ipynb
@@ -360,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3 b)"
+    "#### 3 b) - need to learn first"
    ]
   }
  ],
