--- a/Exorcism/E01_gradient_descent.ipynb
+++ b/Exorcism/E01_gradient_descent.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,21 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[0.37454012, 0.95071431],\n",
+       "((1000, 2),\n",
+       " array([[0.37454012, 0.95071431],\n",
        "        [0.73199394, 0.59865848],\n",
        "        [0.15601864, 0.15599452],\n",
        "        [0.05808361, 0.86617615],\n",
-       "        [0.60111501, 0.70807258]]),\n",
-       " (1000, 2))"
+       "        [0.60111501, 0.70807258]]))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,13 +43,13 @@
    "source": [
     "np.random.seed(42)\n",
     "\n",
-    "X = np.random.rand(1000, 2) # can use uniform or rand, doesn't really matter.\n",
-    "X[0:5], X.shape"
+    "X = np.random.uniform(0, 1, size=(1000,2))\n",
+    "X.shape, X[0:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -58,19 +58,19 @@
        "(1000,)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "epsilon = np.random.normal(0.1, size=1000)\n",
+    "epsilon = np.random.normal(0, 1, size=1000)\n",
     "epsilon.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +79,13 @@
        "(1000,)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Terrible solution, but the dataset was terribly formatted to begin with\n",
     "X1 = np.array([X[i][0] for i in range(len(X))])\n",
     "X2 = np.array([X[i][1] for i in range(len(X))])\n",
     "\n",
@@ -94,9 +95,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[1.        , 0.37454012, 0.95071431],\n",
+       "        [1.        , 0.73199394, 0.59865848],\n",
+       "        [1.        , 0.15601864, 0.15599452]]),\n",
+       " (1000, 3))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X = np.c_[np.ones(len(X)), X]\n",
     "X[0:3], X.shape"
@@ -112,16 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((670, 2), (330, 2), (670,), (330,))"
+       "((670, 3), (330, 3), (670,), (330,))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,23 +150,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = y_train.reshape(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "non-broadcastable output operand with shape (2,1) doesn't match the broadcast shape (2,670)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [7], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[39mreturn\u001b[39;00m theta\n\u001b[0;32m     17\u001b[0m \u001b[39m# Get estimated b0 and b1 values by actually doing the batch gradient descent\u001b[39;00m\n\u001b[1;32m---> 18\u001b[0m theta \u001b[39m=\u001b[39m gradient_descent(X_train, y_train, epochs\u001b[39m=\u001b[39;49m\u001b[39m1000\u001b[39;49m, learning_rate\u001b[39m=\u001b[39;49m\u001b[39m0.1\u001b[39;49m)\n\u001b[0;32m     20\u001b[0m theta\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m) \u001b[39m# throws away additional dimension\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn [7], line 14\u001b[0m, in \u001b[0;36mgradient_descent\u001b[1;34m(X, y, learning_rate, epochs)\u001b[0m\n\u001b[0;32m     11\u001b[0m     gradient \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m \u001b[39m/\u001b[39m m \u001b[39m*\u001b[39m X\u001b[39m.\u001b[39mT \u001b[39m@\u001b[39m (X \u001b[39m@\u001b[39m theta \u001b[39m-\u001b[39m y) \u001b[39m# idk\u001b[39;00m\n\u001b[0;32m     13\u001b[0m     \u001b[39m# determine step size and use it next time we loop\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m     theta \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m learning_rate\u001b[39m*\u001b[39mgradient \u001b[39m# learning_rate is eta in theory\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[39mreturn\u001b[39;00m theta\n",
-      "\u001b[1;31mValueError\u001b[0m: non-broadcastable output operand with shape (2,1) doesn't match the broadcast shape (2,670)"
-     ]
+     "data": {
+      "text/plain": [
+       "array([3.16440925, 3.03763668, 4.82471836])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "np.random.seed(42)\n",
+    "\n",
+    "def gradient_descent(X, y, learning_rate=0.1, epochs=100):\n",
+    "    m = len(X)\n",
+    "    \n",
+    "    # Create random b0 & b1\n",
+    "    theta = np.random.randn(X.shape[1], 1)  # [beta_0, beta_1]^T - [2x1]\n",
+    "    \n",
+    "    for _ in range(epochs):\n",
+    "        # Get gradient (slope)\n",
+    "        gradient = 2 / m * X.T @ (X @ theta - y) # idk\n",
+    "        \n",
+    "        # determine step size and use it next time we loop\n",
+    "        theta -= learning_rate*gradient # learning_rate is eta in theory\n",
+    "    return theta\n",
+    "\n",
+    "# Get estimated b0 and b1 values by actually doing the batch gradient descent\n",
+    "theta = gradient_descent(X_train, y_train, epochs=1000, learning_rate=0.1)\n",
+    "\n",
+    "theta.reshape(-1) # throws away additional dimension\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
