--- a/Exorcism/E02_sklearn.ipynb
+++ b/Exorcism/E02_sklearn.ipynb
@@ -432,61 +432,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parameters [-0.17580806 -0.00671268 -0.04890826 -0.00499185 -0.06044898]\n",
-      "Intercept 46.83710507212051\n"
+      "Intercept 46.83710507212051\n",
+      "Parameters [-0.17580806 -0.00671268 -0.04890826 -0.00499185 -0.06044898]\n"
      ]
     }
    ],
    "source": [
+    "# Note: Normally you'd always scale the data. in this case we arent (bcuz of excersize rules),\n",
+    "# which means that we're passing in a dataframe into the fit(). this aint good, bcuz it really only accepts\n",
+    "# positional x's, or x's with names (e.g a dataframe with column names). So we're using .values here in order\n",
+    "# to only pass a list of values in, without any dataframe names.\n",
+    "\n",
     "model_OLS_SVD = LinearRegression()\n",
     "model_OLS_SVD.fit(x_train.values, y_train)\n",
+    "print(f\"Intercept {model_OLS_SVD.intercept_}\") # beta0\n",
     "print(f\"Parameters {model_OLS_SVD.coef_}\") # beta1, beta2, beta3\n",
-    "print(f\"Intercept {model_OLS_SVD.intercept_}\") # beta0\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction SVD: 30.10, label 26.0\n"
+      "Label 26.0, prediction: 30.10\n"
      ]
     }
    ],
    "source": [
+    "# Test prediction on single sample\n",
+    "\n",
     "test_features = x_test.iloc[:1]\n",
     "test_target = y_test.values[0] # .values[0] because index of series is borked (randomization from train_test_split remember)\n",
     "\n",
-    "print(f\"Prediction SVD: {model_OLS_SVD.predict(test_features.values)[0]:.2f}, label {test_target}\")"
+    "print(f\"Label {test_target}, prediction: {model_OLS_SVD.predict(test_features.values)[0]:.2f}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3\n",
+    "###### Using same code for clarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 231,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 1.0)"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# # Skipping manual regression science i already know it\n",
-    "# scaler = MinMaxScaler()\n",
+    "# Skipping manual regression science i already know it\n",
+    "scaler = MinMaxScaler()\n",
     "\n",
-    "# # Note, we arent fitting as in training, we're fitting as in loading the data.\n",
-    "# scaler.fit(x_train) # use the training data to fit the scaler\n",
+    "# Note, we arent fitting as in training, we're fitting as in loading the data.\n",
+    "scaler.fit(x_train) # use the training data to fit the scaler\n",
     "\n",
-    "# scaled_x_train = scaler.transform(x_train)\n",
-    "# scaled_x_test = scaler.transform(x_test)\n",
+    "scaled_x_train = scaler.transform(x_train)\n",
+    "scaled_x_test = scaler.transform(x_test)\n",
     "\n",
-    "# scaled_x_train.min(), scaled_x_train.max()"
+    "scaled_x_train.min(), scaled_x_train.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept 35.05456267086522\n",
+      "Parameters [ -0.87904032  -2.58438197  -8.9991205  -17.60626497  -1.01554282]\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_OLS_SVD_scaled = LinearRegression()\n",
+    "model_OLS_SVD_scaled.fit(scaled_x_train, y_train)\n",
+    "print(f\"Intercept {model_OLS_SVD_scaled.intercept_}\") # beta0\n",
+    "print(f\"Parameters {model_OLS_SVD_scaled.coef_}\") # beta1, beta2, beta3\n"
    ]
   }
  ],
