--- a/Exorcism/E02_sklearn.ipynb
+++ b/Exorcism/E02_sklearn.ipynb
@@ -537,6 +537,20 @@
     "print(f\"Intercept {model_OLS_SVD_scaled.intercept_}\") # beta0\n",
     "print(f\"Parameters {model_OLS_SVD_scaled.coef_}\") # beta1, beta2, beta3\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import SGDRegressor\n",
+    "\n",
+    "model_SGD = SGDRegressor(loss = \"squared_error\", learning_rate=\"invscaling\", max_iter = 10000)\n",
+    "model_SGD.fit(scaled_X_train, y_train)\n",
+    "print(f\"Parameters: {model_SGD.coef_}\")\n",
+    "print(f\"Intercept: {model_SGD.intercept_}\")"
+   ]
   }
  ],
  "metadata": {
