--- a/Exorcism/E02_sklearn.ipynb
+++ b/Exorcism/E02_sklearn.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "[392 rows x 9 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        " (392, 9))"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,16 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1bffb663070>"
+       "<seaborn.axisgrid.PairGrid at 0x246556774c0>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        " Name: mpg, Length: 392, dtype: float64)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "((313, 5), (79, 5), (313,), (79,))"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,57 +426,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2\n",
-    "###### this ones unclear and frankly and load of bs. will skip the function"
+    "### 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_perf(X_train, X_test, Y_train, Y_test, model):\n",
+    "\n",
+    "    model.fit(X_train, y_train)\n",
+    "    \n",
+    "    intercept = model.intercept_ # beta0\n",
+    "    coefficients = model.coef_ # beta1, beta2, beta3\n",
+    "    \n",
+    "    # first predict on our test data \n",
+    "    y_pred = model.predict(X_test)\n",
+    "\n",
+    "    mae = mean_absolute_error(y_test, y_pred)\n",
+    "    mse = mean_squared_error(y_test, y_pred)\n",
+    "    rmse = np.sqrt(mse)\n",
+    "\n",
+    "    return intercept, coefficients, mae, mse, rmse\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intercept 46.83710507212051\n",
-      "Parameters [-0.17580806 -0.00671268 -0.04890826 -0.00499185 -0.06044898]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(46.83710507212051,\n",
+       " array([-0.17580806, -0.00671268, -0.04890826, -0.00499185, -0.06044898]),\n",
+       " 3.4861318033367867,\n",
+       " 17.939171976631247,\n",
+       " 4.235465969244854)"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Note: Normally you'd always scale the data. in this case we arent (bcuz of excersize rules),\n",
-    "# which means that we're passing in a dataframe into the fit(). this aint good, bcuz it really only accepts\n",
-    "# positional x's, or x's with names (e.g a dataframe with column names). So we're using .values here in order\n",
-    "# to only pass a list of values in, without any dataframe names.\n",
-    "\n",
     "model_OLS_SVD = LinearRegression()\n",
-    "model_OLS_SVD.fit(x_train.values, y_train)\n",
-    "print(f\"Intercept {model_OLS_SVD.intercept_}\") # beta0\n",
-    "print(f\"Parameters {model_OLS_SVD.coef_}\") # beta1, beta2, beta3\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Label 26.0, prediction: 30.10\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test prediction on single sample\n",
-    "\n",
-    "test_features = x_test.iloc[:1]\n",
-    "test_target = y_test.values[0] # .values[0] because index of series is borked (randomization from train_test_split remember)\n",
-    "\n",
-    "print(f\"Label {test_target}, prediction: {model_OLS_SVD.predict(test_features.values)[0]:.2f}\")"
+    "eval_perf(x_train.values, x_test.values, y_train, y_test, model_OLS_SVD)"
    ]
   },
   {
@@ -490,7 +488,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Perf_df = pd.DataFrame(index=['MAE', 'MSE', 'RMSE'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_OLS_SVD = LinearRegression()\n",
+    "metrics = eval_perf(x_train.values, x_test.values, y_train, y_test, model_OLS_SVD)\n",
+    "\n",
+    "Perf_df['OLS_SVD'] = [metrics[i] for i in range(2, 5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +518,7 @@
        "(0.0, 1.0)"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,37 +538,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Intercept 35.05456267086522\n",
-      "Parameters [ -0.87904032  -2.58438197  -8.9991205  -17.60626497  -1.01554282]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model_OLS_SVD_scaled = LinearRegression()\n",
-    "model_OLS_SVD_scaled.fit(scaled_x_train, y_train)\n",
-    "print(f\"Intercept {model_OLS_SVD_scaled.intercept_}\") # beta0\n",
-    "print(f\"Parameters {model_OLS_SVD_scaled.coef_}\") # beta1, beta2, beta3\n"
+    "model_OLS_SVD = LinearRegression()\n",
+    "metrics = eval_perf(scaled_x_train, scaled_x_test, y_train, y_test, model_OLS_SVD)\n",
+    "\n",
+    "Perf_df['OLS_SVD Scaled'] = [metrics[i] for i in range(2, 5)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import SGDRegressor\n",
+    "model_SGD = SGDRegressor(loss=\"squared_error\", learning_rate=\"invscaling\", max_iter=10000)\n",
+    "metrics = eval_perf(scaled_x_train, scaled_x_test, y_train, y_test, model_SGD)\n",
     "\n",
-    "model_SGD = SGDRegressor(loss = \"squared_error\", learning_rate=\"invscaling\", max_iter = 10000)\n",
-    "model_SGD.fit(scaled_X_train, y_train)\n",
-    "print(f\"Parameters: {model_SGD.coef_}\")\n",
-    "print(f\"Intercept: {model_SGD.intercept_}\")"
+    "Perf_df['SGD scaled'] = [metrics[i] for i in range(2, 5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OLS_SVD</th>\n",
+       "      <th>OLS_SVD Scaled</th>\n",
+       "      <th>SGD scaled</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MAE</th>\n",
+       "      <td>3.486132</td>\n",
+       "      <td>3.486132</td>\n",
+       "      <td>3.450124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSE</th>\n",
+       "      <td>17.939172</td>\n",
+       "      <td>17.939172</td>\n",
+       "      <td>18.088891</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RMSE</th>\n",
+       "      <td>4.235466</td>\n",
+       "      <td>4.235466</td>\n",
+       "      <td>4.253104</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        OLS_SVD  OLS_SVD Scaled  SGD scaled\n",
+       "MAE    3.486132        3.486132    3.450124\n",
+       "MSE   17.939172       17.939172   18.088891\n",
+       "RMSE   4.235466        4.235466    4.253104"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Perf_df"
    ]
   }
  ],
