--- a/Exorcism/E00_linear_regression.ipynb
+++ b/Exorcism/E00_linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 844,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 845,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "4   76.584663  155.666051"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 845,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 846,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "<AxesSubplot: xlabel='Minutes', ylabel='SEK'>"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 846,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 847,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "4   76.584663  155.666051"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 847,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 848,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 849,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "((266,), (115,), (266,), (115,))"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 849,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 850,
    "metadata": {},
    "outputs": [
     {
@@ -334,13 +334,15 @@
        "((266, 1), (115, 1), (266, 1), (115, 1))"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 850,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Convert from pandas vectors to numpy (n, 2) matrices\n",
+    "# Convert from pandas vectors to numpy (n, 2) matrices. Technically not needed for y's, but done as best practice.\n",
+    "# When using numpy and doing it all manually, its best to have your shapes me actual matrices.\n",
+    "# But you should only use the matrices for regression, not for things like graphing (would make your code look like crap)\n",
     "x_train_matrix = np.array(x_train).reshape(-1, 1)\n",
     "x_test_matrix = np.array(x_test).reshape(-1, 1)\n",
     "y_train_matrix = np.array(y_train).reshape(-1, 1)\n",
@@ -359,16 +361,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 851,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([32.22147722,  1.91050591])"
+       "array([[32.22147722],\n",
+       "       [ 1.91050591]])"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 851,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,13 +388,13 @@
     "# using the ordinary least squares algorithm\n",
     "regression_fit = lambda X, y: np.linalg.pinv(X.T @ X) @ X.T @ y\n",
     "\n",
-    "beta_hat = regression_fit(x_train_matrix, y_train)\n",
+    "beta_hat = regression_fit(x_train_matrix, y_train_matrix)\n",
     "beta_hat # weight and bias (intercept)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 852,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +403,7 @@
        "<AxesSubplot: xlabel='Minutes', ylabel='SEK'>"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 852,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -435,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 853,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +447,7 @@
        "<AxesSubplot: xlabel='Minutes', ylabel='SEK'>"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 853,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -475,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 854,
    "metadata": {},
    "outputs": [
     {
@@ -483,15 +486,14 @@
      "output_type": "stream",
      "text": [
       "Regression coefficients beta: [32.22147722  1.91050591]\n",
-      "Shape of y_hat is (115, 1), i.e. prediction for each sample in test set\n",
-      "TV, Radio, Newspaper spending of 86.17356988288154 gives prediction of 196.9 thousand units\n",
-      "The true sale label is y = 167.37838861807444 thousand units\n"
+      "Shape of y_hat: (115, 1)\n",
+      "A spending of 86.17k on TV, Radio and Newspaper gives a predicted sales volume of 196.9k units\n",
+      "The true volume: 167.37838861807444\n"
      ]
     }
    ],
    "source": [
     "# training - we fit the weights beta_hat to the training data\n",
-    "beta_hat = regression_fit(x_train_matrix, y_train_matrix)\n",
     "print(f\"Regression coefficients beta: {beta_hat.flatten()}\")\n",
     "\n",
     "# we generalize the predict to work for matrix with many samples\n",
@@ -500,15 +502,14 @@
     "# note that X_test shape is (60, 1) and beta_hat shape needs to be (4,1)\n",
     "y_hat = predict(x_test_matrix, beta_hat)\n",
     "\n",
-    "print(f\"Shape of y_hat is {y_hat.shape}, i.e. prediction for each sample in test set\")\n",
-    "\n",
-    "print(f\"TV, Radio, Newspaper spending of {x_test.iloc[0]} gives prediction of {y_hat[0][0]:.1f} thousand units\")\n",
-    "print(f\"The true sale label is y = {y_test.iloc[0]} thousand units\")"
+    "print(f\"Shape of y_hat: {y_hat.shape}\")\n",
+    "print(f\"A spending of {x_test.iloc[0]:.2f}k on TV, Radio and Newspaper gives a predicted sales volume of {y_hat[0][0]:.1f}k units\")\n",
+    "print(f\"The true volume: {y_test.iloc[0]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 855,
    "metadata": {},
    "outputs": [
     {
@@ -522,11 +523,12 @@
     }
    ],
    "source": [
-    "m = len(y_test)\n",
-    "y_hat = np.reshape(y_hat, (m))  # removes the extra dimension\n",
+    "y_hat = y_hat.flatten() # or y_hat = y_hat.reshape(115,)\n",
     "\n",
-    "MAE = 1 / m * np.sum(np.abs(y_test - y_hat))\n",
-    "MSE = 1 / m * np.sum((y_test - y_hat) ** 2)\n",
+    "l = len(y_test)\n",
+    "\n",
+    "MAE = 1 / l * np.sum(np.abs(y_test - y_hat))\n",
+    "MSE = 1 / l * np.sum((y_test - y_hat) ** 2)\n",
     "RMSE = np.sqrt(MSE)\n",
     "\n",
     "for metric in [\n",
@@ -548,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 856,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +680,7 @@
        "[10000 rows x 4 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 856,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 857,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 858,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +883,7 @@
        "[9320 rows x 4 columns]"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 858,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 859,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 860,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +948,7 @@
        "((7456, 4), (1864, 4))"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 860,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -960,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 861,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +971,7 @@
        "((7456, 3), (1864, 3), (7456,), (1864,))"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 861,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 862,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1126,7 @@
        "[7456 rows x 4 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 862,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 863,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1153,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 863,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 864,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1179,7 @@
        "       192.76763499, 232.95366942])"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 864,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 865,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1213,7 @@
        "(39.237711559716004, 2421.2614765161297, 49.20631541292367)"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 865,
      "metadata": {},
      "output_type": "execute_result"
     }
