--- a/Exorcism/E00_linear_regression.ipynb
+++ b/Exorcism/E00_linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 844,
+   "execution_count": 924,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 845,
+   "execution_count": 925,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "4   76.584663  155.666051"
       ]
      },
-     "execution_count": 845,
+     "execution_count": 925,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 846,
+   "execution_count": 926,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "<AxesSubplot: xlabel='Minutes', ylabel='SEK'>"
       ]
      },
-     "execution_count": 846,
+     "execution_count": 926,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 847,
+   "execution_count": 927,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "4   76.584663  155.666051"
       ]
      },
-     "execution_count": 847,
+     "execution_count": 927,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 848,
+   "execution_count": 928,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 849,
+   "execution_count": 929,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "((266,), (115,), (266,), (115,))"
       ]
      },
-     "execution_count": 849,
+     "execution_count": 929,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 850,
+   "execution_count": 930,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "((266, 1), (115, 1), (266, 1), (115, 1))"
       ]
      },
-     "execution_count": 850,
+     "execution_count": 930,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 851,
+   "execution_count": 931,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "       [ 1.91050591]])"
       ]
      },
-     "execution_count": 851,
+     "execution_count": 931,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 852,
+   "execution_count": 932,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "<AxesSubplot: xlabel='Minutes', ylabel='SEK'>"
       ]
      },
-     "execution_count": 852,
+     "execution_count": 932,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 853,
+   "execution_count": 933,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "<AxesSubplot: xlabel='Minutes', ylabel='SEK'>"
       ]
      },
-     "execution_count": 853,
+     "execution_count": 933,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 854,
+   "execution_count": 934,
    "metadata": {},
    "outputs": [
     {
@@ -509,34 +509,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 855,
+   "execution_count": 935,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean absolute error: 40.12k units\n",
-      "Mean squared error: 2401.58M units\n",
-      "Root mean square error: 49.01k units\n"
+      "mean absolute error: 40.12k units\n",
+      "mean squared error: 2401.58M units\n",
+      "root mean squared error: 49.01k units\n"
      ]
     }
    ],
    "source": [
     "y_hat = y_hat.flatten() # or y_hat = y_hat.reshape(115,)\n",
-    "\n",
     "l = len(y_test)\n",
     "\n",
-    "MAE = 1 / l * np.sum(np.abs(y_test - y_hat))\n",
-    "MSE = 1 / l * np.sum((y_test - y_hat) ** 2)\n",
-    "RMSE = np.sqrt(MSE)\n",
+    "mean_absolute_error = 1/l*np.sum(np.abs(y_test-y_hat))\n",
+    "mean_squared_error = 1/l*np.sum((y_test-y_hat)**2)\n",
+    "root_mean_squared_error = np.sqrt(mean_squared_error)\n",
     "\n",
-    "for metric in [\n",
-    "    (\"Mean absolute error\", \"MAE\", \"k units\"),\n",
-    "    (\"Mean squared error\", \"MSE\", \"M units\"),  \n",
-    "    (\"Root mean square error\", \"RMSE\", \"k units\"),\n",
-    "]:\n",
-    "    print(f\"{metric[0]}: {eval(metric[1]):.2f}{metric[2]}\")"
+    "print(f\"mean absolute error: {mean_absolute_error:.2f}k units\")\n",
+    "print(f\"mean squared error: {mean_squared_error:.2f}M units\")\n",
+    "print(f\"root mean squared error: {root_mean_squared_error:.2f}k units\")"
    ]
   },
   {
@@ -550,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 856,
+   "execution_count": 936,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +676,7 @@
        "[10000 rows x 4 columns]"
       ]
      },
-     "execution_count": 856,
+     "execution_count": 936,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 857,
+   "execution_count": 937,
    "metadata": {},
    "outputs": [
     {
@@ -739,8 +735,9 @@
     "\n",
     "for i in range(4):\n",
     "    ax[i].hist(x = df.iloc[:, i])\n",
-    "    #sns.histplot(data = df, x = df.iloc[:, i], ax=ax[i])\n",
-    "    ax[i].set_title(f\"{df.iloc[:, i].name}\")"
+    "    ax[i].set_title(f\"{df.iloc[:, i].name}\")\n",
+    "    \n",
+    "    # or sns.histplot(data = df, x = df.iloc[:, i], ax=ax[i])"
    ]
   },
   {
@@ -753,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 858,
+   "execution_count": 938,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +880,7 @@
        "[9320 rows x 4 columns]"
       ]
      },
-     "execution_count": 858,
+     "execution_count": 938,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 859,
+   "execution_count": 939,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 860,
+   "execution_count": 940,
    "metadata": {},
    "outputs": [
     {
@@ -948,12 +945,13 @@
        "((7456, 4), (1864, 4))"
       ]
      },
-     "execution_count": 860,
+     "execution_count": 940,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# manually doing it because i like torturing myself\n",
     "train = df.sample(frac=0.8, replace=False, random_state=42)\n",
     "test = df.drop(train.index)\n",
     "\n",
@@ -962,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 861,
+   "execution_count": 941,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +969,7 @@
        "((7456, 3), (1864, 3), (7456,), (1864,))"
       ]
      },
-     "execution_count": 861,
+     "execution_count": 941,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 862,
+   "execution_count": 942,
    "metadata": {},
    "outputs": [
     {
@@ -1126,12 +1124,13 @@
        "[7456 rows x 4 columns]"
       ]
      },
-     "execution_count": 862,
+     "execution_count": 942,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Adding intercept multiplier. again, this has nothing to do with our explanatory variables.\n",
     "x_train.insert(0, \"Intercept\", 1)\n",
     "x_test.insert(0, \"Intercept\", 1)\n",
     "\n",
@@ -1140,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 863,
+   "execution_count": 943,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1152,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 863,
+     "execution_count": 943,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 864,
+   "execution_count": 944,
    "metadata": {},
    "outputs": [
     {
@@ -1179,14 +1178,15 @@
        "       192.76763499, 232.95366942])"
       ]
      },
-     "execution_count": 864,
+     "execution_count": 944,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def predict(x, betas):\n",
-    "    # Note: np.dot is a lot more forgiving than matmul, so you'd need to convert to np arrays and add dimention\n",
+    "    # Note: np.dot is a lot more forgiving than matmul. With matmul, you'd need to\n",
+    "    # convert to np arrays and add dimention convert to matrices)\n",
     "    return np.dot(x, betas)\n",
     "\n",
     "# test_sample = [1, 202, 39, 1.5] for single prediction\n",
@@ -1204,32 +1204,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 865,
+   "execution_count": 945,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(39.237711559716004, 2421.2614765161297, 49.20631541292367)"
-      ]
-     },
-     "execution_count": 865,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean absolute error: 39.24k units\n",
+      "mean squared error: 2421.26M units\n",
+      "root mean squared error: 49.21k units\n"
+     ]
     }
    ],
    "source": [
-    "m = len(y_test)\n",
+    "l = len(y_hat)\n",
     "\n",
-    "mean_absolute_error = 1/m*np.sum(np.abs(y_test-y_hat))\n",
-    "mean_squared_error = 1/m*np.sum((y_test-y_hat)**2)\n",
+    "mean_absolute_error = 1/l*np.sum(np.abs(y_test-y_hat))\n",
+    "mean_squared_error = 1/l*np.sum((y_test-y_hat)**2)\n",
     "root_mean_squared_error = np.sqrt(mean_squared_error)\n",
     "\n",
-    "mean_absolute_error, mean_squared_error, root_mean_squared_error\n",
+    "print(f\"mean absolute error: {mean_absolute_error:.2f}k units\")\n",
+    "print(f\"mean squared error: {mean_squared_error:.2f}M units\")\n",
+    "print(f\"root mean squared error: {root_mean_squared_error:.2f}k units\")\n",
     "\n",
-    "# error given samples of data\n",
-    "# many: 39.72641445614409, 2477.9779170142556, 49.77929205015129)\n",
-    "# few: 36.717330327045744, 2050.7563162407705, 45.285277036149076"
+    "# error given small & large samples of data\n",
+    "# many: 39.72, 2477.97, 49.77)\n",
+    "# few: 36.71, 2050.75, 45.28"
    ]
   }
  ],
