--- a/Lab/Lab.ipynb
+++ b/Lab/Lab.ipynb
@@ -1,5 +1,379 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1 - Movielens full - EDA"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_df = pd.read_csv('Data/movies.csv')\n",
+    "ratings_df = pd.read_csv('Data/ratings.csv', usecols=['userId', 'movieId', 'rating'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 58098 entries, 0 to 58097\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   movieId  58098 non-null  int64 \n",
+      " 1   title    58098 non-null  object\n",
+      " 2   genres   58098 non-null  object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 1.3+ MB\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 27753444 entries, 0 to 27753443\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column   Dtype  \n",
+      "---  ------   -----  \n",
+      " 0   userId   int64  \n",
+      " 1   movieId  int64  \n",
+      " 2   rating   float64\n",
+      "dtypes: float64(1), int64(2)\n",
+      "memory usage: 635.2 MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <td>58098.0</td>\n",
+       "      <td>111919.516197</td>\n",
+       "      <td>59862.660956</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>72437.75</td>\n",
+       "      <td>126549.0</td>\n",
+       "      <td>161449.5</td>\n",
+       "      <td>193886.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           count           mean           std  min       25%       50%  \\\n",
+       "movieId  58098.0  111919.516197  59862.660956  1.0  72437.75  126549.0   \n",
+       "\n",
+       "              75%       max  \n",
+       "movieId  161449.5  193886.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>userId</th>\n",
+       "      <td>27753444.0</td>\n",
+       "      <td>141942.015571</td>\n",
+       "      <td>81707.400091</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>71176.0</td>\n",
+       "      <td>142022.0</td>\n",
+       "      <td>212459.0</td>\n",
+       "      <td>283228.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>movieId</th>\n",
+       "      <td>27753444.0</td>\n",
+       "      <td>18487.999834</td>\n",
+       "      <td>35102.625247</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1097.0</td>\n",
+       "      <td>2716.0</td>\n",
+       "      <td>7150.0</td>\n",
+       "      <td>193886.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rating</th>\n",
+       "      <td>27753444.0</td>\n",
+       "      <td>3.530445</td>\n",
+       "      <td>1.066353</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              count           mean           std  min      25%       50%  \\\n",
+       "userId   27753444.0  141942.015571  81707.400091  1.0  71176.0  142022.0   \n",
+       "movieId  27753444.0   18487.999834  35102.625247  1.0   1097.0    2716.0   \n",
+       "rating   27753444.0       3.530445      1.066353  0.5      3.0       3.5   \n",
+       "\n",
+       "              75%       max  \n",
+       "userId   212459.0  283228.0  \n",
+       "movieId    7150.0  193886.0  \n",
+       "rating        4.0       5.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(\n",
+    "    movies_df.info(),\n",
+    "    ratings_df.info(),\n",
+    "    movies_df.describe().T,\n",
+    "    ratings_df.describe().T\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>307</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>481</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1091</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1257</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1449</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27753439</th>\n",
+       "      <td>283228</td>\n",
+       "      <td>8542</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27753440</th>\n",
+       "      <td>283228</td>\n",
+       "      <td>8712</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27753441</th>\n",
+       "      <td>283228</td>\n",
+       "      <td>34405</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27753442</th>\n",
+       "      <td>283228</td>\n",
+       "      <td>44761</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27753443</th>\n",
+       "      <td>283228</td>\n",
+       "      <td>54286</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>27753444 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          userId  movieId  rating\n",
+       "0              1      307     3.5\n",
+       "1              1      481     3.5\n",
+       "2              1     1091     1.5\n",
+       "3              1     1257     4.5\n",
+       "4              1     1449     4.5\n",
+       "...          ...      ...     ...\n",
+       "27753439  283228     8542     4.5\n",
+       "27753440  283228     8712     4.5\n",
+       "27753441  283228    34405     4.5\n",
+       "27753442  283228    44761     4.5\n",
+       "27753443  283228    54286     4.5\n",
+       "\n",
+       "[27753444 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings_df"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Code-CYgrxAwh",
